# better-file-manager

./: .coverage  README.md  TODO.md  Taskfile.yml  hello.py  pyproject.toml
better_file_manager/: main.py  text_to_mds.py
docs/: README.md  assembly.md
tests/: test_file_watcher.py  test_text_to_mds.py
